--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,14 +1,14 @@
 {
-  `name`: `back-end`,
-  `version`: `1.0.0`,
-  `description`: ``,
-  `main`: `data.js`,
-  `scripts`: {
-    `test`: `echo \`Error: no test specified\` && exit 1`
+  "name": "back-end",
+  "version": "1.0.0",
+  "description": "",
+  "main": "data.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  `author`: ``,
-  `license`: `ISC`,
-  `dependencies`: {
-    `express`: `^4.17.1`
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
