--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,13 +2,16 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "data.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
