--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@qiuz/react-image-map": "^1.1.0"
+    "@qiuz/react-image-map": "^1.1.0",
+    "react-responsive": "^8.2.0"
   }
 }
